# GithubProfileManager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
examples/: github_profile_manager.json
github_profile_manager/: __init__.py  account.py  api.py  global_variables.py  keys.py  repositories.py
github_profile_manager/utils/: config.py  logging.py  parser.py
